# flowgate

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  nats-server.conf  prometheus.yml
.github/workflows/: ci.yml
crates/flowgate-dashboard/: Cargo.toml
crates/flowgate-dashboard/src/: api.rs  main.rs  ws.rs
crates/flowgate-producer/: Cargo.toml
crates/flowgate-producer/src/: main.rs
crates/flowgate-service/: Cargo.toml
crates/flowgate-service/src/: buffer.rs  config.rs  envelope.rs  main.rs  metrics.rs  pid.rs  pipeline.rs  threshold.rs
dashboard/: package-lock.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: ControlPanel.tsx  InstancePanel.tsx  MetricGauge.tsx  ProducerPanel.tsx  ScoreHistogram.tsx  TimeSeriesChart.tsx
dashboard/src/hooks/: useFlowgateSocket.ts
docs/: analytical-model.md  architecture.md  development.md  operator-runbook.md  tuning-guide.md
scripts/: setup-nats.sh
