[package]
name = "flowgate-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowgate-dashboard"
path = "src/main.rs"

[dependencies]
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
