[package]
name = "flowgate-producer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowgate-producer"
path = "src/main.rs"

[dependencies]
async-nats.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand = "0.9"
rand_distr = "0.5"
