[package]
name = "flowgate-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowgate"
path = "src/main.rs"

[dependencies]
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
futures = "0.3"
